--- a/mock/.env
+++ b/mock/.env
@@ -1,4 +1,4 @@
-RUST_LOG='info,aws_config::meta::region=off,aws_sdk_dynamodb=error,hyper=error'
+# RUST_LOG='info,aws_config::meta::region=off'
 
 APP_ENVIRONMENT="local"
 
