--- a/mock/.env
+++ b/mock/.env
@@ -1,6 +1,7 @@
 # RUST_LOG='info,aws_config::meta::region=off'
 
 APP_ENVIRONMENT="local"
+ENDPOINT_URL="http://127.0.0.1:8001"
 
 # Dyanmo
 AWS_ACCESS_KEY_ID='fakeMyKeyId'
