--- a/mock/Cargo.toml
+++ b/mock/Cargo.toml
@@ -37,7 +37,7 @@ tracing-subscriber = { version = "0.3", features = [
     "registry",
     "time",
 ] }
-utoipa = { version = "5.1.1", features = ["axum_extras"] }
-utoipa-swagger-ui = { version = "8.0.1", features = ["axum"] }
+utoipa = { version = "4.2.0", features = ["axum_extras", "chrono"] }
+utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
 uuid = { version = "1.11.0", features = ["v4", "serde"] }
 validator = { version = "0.18.1", features = ["derive"] }
