--- a/mock/.env
+++ b/mock/.env
@@ -1,4 +1,4 @@
-# RUST_LOG='info,aws_config::meta::region=off'
+RUST_LOG='info,aws_config::meta::region=off'
 
 APP_ENVIRONMENT="local"
 ENDPOINT_URL="http://127.0.0.1:8001"
