added generated SDKs

--- a/mock/.env
+++ b/mock/.env
@@ -3,7 +3,7 @@ RUST_LOG='info,aws_config::meta::region=off'
 APP_ENVIRONMENT="local"
 ENDPOINT_URL="http://127.0.0.1:8001"
 
-# Dyanmo
+# Dyanmo local requires credential vars be set, but it will allow complete garbage
 AWS_ACCESS_KEY_ID='fakeMyKeyId'
 AWS_SECRET_ACCESS_KEY='fakeSecretAccessKey'
 AWS_REGION='us-east-1'
