--- a/typescript/package.json
+++ b/typescript/package.json
@@ -8,7 +8,17 @@
         "watch": "tsc -w"
     },
     "devDependencies": {
+        "@types/aws-lambda": "^8.10.145",
         "@types/node": "^20.16.11",
-        "source-map-support": "^0.5.21"
+        "openapi-typescript": "^7.4.1",
+        "source-map-support": "^0.5.21",
+        "typescript": "^5.6.3"
+    },
+    "dependencies": {
+        "@aws-lambda-powertools/logger": "^2.10.0",
+        "@aws-lambda-powertools/tracer": "^2.10.0",
+        "@notionhq/client": "^2.2.15",
+        "axios": "^1.7.7",
+        "openapi-fetch": "^0.12.2"
     }
 }
