--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -10,10 +10,11 @@
     },
     "devDependencies": {
         "@types/node": "^20.12.12",
-        "aws-cdk": "^2.142.1",
-        "aws-cdk-lib": "^2.142.1",
+        "aws-cdk": "2.164.1",
+        "aws-cdk-lib": "2.164.1",
         "constructs": "^10.3.0",
         "dotenv": "^16.4.5",
+        "esbuild": "^0.24.0",
         "source-map-support": "^0.5.21"
     },
     "dependencies": {
