--- a/mock/.env
+++ b/mock/.env
@@ -2,6 +2,7 @@ RUST_LOG='info,aws_config::meta::region=off'
 
 APP_ENVIRONMENT="local"
 ENDPOINT_URL="http://127.0.0.1:8001"
+TORII_SECRET='torii-api-key'
 
 # Dyanmo local requires credential vars be set, but it will allow complete garbage
 AWS_ACCESS_KEY_ID='fakeMyKeyId'
