--- a/typescript/package.json
+++ b/typescript/package.json
@@ -2,7 +2,7 @@
     "name": "notion-torii",
     "version": "0.1.0",
     "bin": {
-        "main": "src/main.js"
+        "main": "src/handler.js"
     },
     "scripts": {
         "watch": "tsc -w"
@@ -10,15 +10,17 @@
     "devDependencies": {
         "@types/aws-lambda": "^8.10.145",
         "@types/node": "^20.16.11",
-        "openapi-typescript": "^7.4.1",
+        "openapi-typescript": "7.4.2",
         "source-map-support": "^0.5.21",
         "typescript": "^5.6.3"
     },
     "dependencies": {
         "@aws-lambda-powertools/logger": "^2.10.0",
         "@aws-lambda-powertools/tracer": "^2.10.0",
+        "@aws-sdk/client-secrets-manager": "^3.679.0",
         "@notionhq/client": "^2.2.15",
         "axios": "^1.7.7",
-        "openapi-fetch": "^0.12.2"
+        "dotenv": "^16.4.5",
+        "openapi-fetch": "0.13.0"
     }
 }
